--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>
             VIDRAL FACTORY 
         </title>
+        <link rel="icon" type="image/png" href="/favicon.png">
         <meta content="" name="description">
         <meta content="" name="author">
         <meta content="" name="keywords">
